trustfall_core/test_data/tests/valid_queries/nonexistent_optional_with_immediate_coercion.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Zero {
        zero: value @output

        predecessor @optional {
            ... on Composite {
                value @output
            }
        }
    }
}"#,
    arguments: {},
)
